// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article summary headline component 1`] = `
<Text
  accessibilityRole="header"
  aria-level="3"
>
  PM hails breakthrough ahead of key Commons vote
</Text>
`;

exports[`2. article summary strapline component 1`] = `
<Text
  accessibilityRole="header"
  aria-level="4"
>
  PM hails breakthrough ahead of key Commons vote
</Text>
`;
